# game-of-life

./: .gitignore  .gitmodules  CMakeLists.txt  cell.hpp  classic.cpp  classic.hpp  rules.hpp  util.hpp
lib/: classic.hpp  matrix.hpp  rules.hpp  universe.hpp  universe_builder.hpp
test/: main.cpp  rules.hpp
