cmake_minimum_required(VERSION 3.9.1)
project(game_of_life)
file(GLOB SOURCES lib/*.cpp lib/*.hpp)
file(GLOB TEST_SOURCES test/*.cpp test/*.hpp)
add_subdirectory(contrib/googletest)
add_library(game_of_life ${SOURCES})
add_executable(game_of_life_test ${TEST_SOURCES})
set_target_properties(game_of_life PROPERTIES CXX_STANDARD 17)
target_include_directories(game_of_life PUBLIC lib)
target_include_directories(game_of_life_test PRIVATE contrib/googletest/googletest/include $<TARGET_PROPERTY:game_of_life,INTERFACE_INCLUDE_DIRECTORIES>)
target_link_libraries(game_of_life_test PRIVATE gtest game_of_life)